; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/btm/extr_btm_ble_adv_filter.c_btm_ble_advfilt_deq_op_q.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/btm/extr_btm_ble_adv_filter.c_btm_ble_advfilt_deq_op_q.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32*, i64, i32**, i32**, i32*, i32* }

@btm_ble_adv_filt_cb = common dso_local global %struct.TYPE_4__ zeroinitializer, align 8
@BTM_BLE_ADV_FILT_SUBCODE_MASK = common dso_local global i32 0, align 4
@BTM_BLE_PF_TYPE_MAX = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [69 x i8] c"btm_ble_advfilt_deq_op_q: ocf:%d, action:%d, ref_value:%d, cb_evt:%x\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @btm_ble_advfilt_deq_op_q(i32* %0, i32* %1, i32* %2, i32* %3, i32** %4, i32** %5) #0 {
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32**, align 8
  %12 = alloca i32**, align 8
  store i32* %0, i32** %7, align 8
  store i32* %1, i32** %8, align 8
  store i32* %2, i32** %9, align 8
  store i32* %3, i32** %10, align 8
  store i32** %4, i32*** %11, align 8
  store i32** %5, i32*** %12, align 8
  %13 = load i32*, i32** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @btm_ble_adv_filt_cb, i32 0, i32 0, i32 0), align 8
  %14 = load i64, i64* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @btm_ble_adv_filt_cb, i32 0, i32 0, i32 1), align 8
  %15 = getelementptr inbounds i32, i32* %13, i64 %14
  %16 = load i32, i32* %15, align 4
  %17 = ashr i32 %16, 4
  %18 = load i32*, i32** %8, align 8
  store i32 %17, i32* %18, align 4
  %19 = load i32*, i32** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @btm_ble_adv_filt_cb, i32 0, i32 0, i32 0), align 8
  %20 = load i64, i64* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @btm_ble_adv_filt_cb, i32 0, i32 0, i32 1), align 8
  %21 = getelementptr inbounds i32, i32* %19, i64 %20
  %22 = load i32, i32* %21, align 4
  %23 = load i32, i32* @BTM_BLE_ADV_FILT_SUBCODE_MASK, align 4
  %24 = and i32 %22, %23
  %25 = load i32*, i32** %7, align 8
  store i32 %24, i32* %25, align 4
  %26 = load i32*, i32** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @btm_ble_adv_filt_cb, i32 0, i32 0, i32 5), align 8
  %27 = load i64, i64* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @btm_ble_adv_filt_cb, i32 0, i32 0, i32 1), align 8
  %28 = getelementptr inbounds i32, i32* %26, i64 %27
  %29 = load i32, i32* %28, align 4
  %30 = load i32*, i32** %10, align 8
  store i32 %29, i32* %30, align 4
  %31 = load i32*, i32** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @btm_ble_adv_filt_cb, i32 0, i32 0, i32 4), align 8
  %32 = load i64, i64* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @btm_ble_adv_filt_cb, i32 0, i32 0, i32 1), align 8
  %33 = getelementptr inbounds i32, i32* %31, i64 %32
  %34 = load i32, i32* %33, align 4
  %35 = load i32*, i32** %9, align 8
  store i32 %34, i32* %35, align 4
  %36 = load i32**, i32*** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @btm_ble_adv_filt_cb, i32 0, i32 0, i32 3), align 8
  %37 = load i64, i64* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @btm_ble_adv_filt_cb, i32 0, i32 0, i32 1), align 8
  %38 = getelementptr inbounds i32*, i32** %36, i64 %37
  %39 = load i32*, i32** %38, align 8
  %40 = load i32**, i32*** %11, align 8
  store i32* %39, i32** %40, align 8
  %41 = load i32**, i32*** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @btm_ble_adv_filt_cb, i32 0, i32 0, i32 2), align 8
  %42 = load i64, i64* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @btm_ble_adv_filt_cb, i32 0, i32 0, i32 1), align 8
  %43 = getelementptr inbounds i32*, i32** %41, i64 %42
  %44 = load i32*, i32** %43, align 8
  %45 = load i32**, i32*** %12, align 8
  store i32* %44, i32** %45, align 8
  %46 = load i64, i64* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @btm_ble_adv_filt_cb, i32 0, i32 0, i32 1), align 8
  %47 = add i64 %46, 1
  %48 = load i32, i32* @BTM_BLE_PF_TYPE_MAX, align 4
  %49 = sext i32 %48 to i64
  %50 = urem i64 %47, %49
  store i64 %50, i64* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @btm_ble_adv_filt_cb, i32 0, i32 0, i32 1), align 8
  %51 = load i32*, i32** %8, align 8
  %52 = load i32, i32* %51, align 4
  %53 = load i32*, i32** %7, align 8
  %54 = load i32, i32* %53, align 4
  %55 = load i32*, i32** %10, align 8
  %56 = load i32, i32* %55, align 4
  %57 = load i32*, i32** %9, align 8
  %58 = load i32, i32* %57, align 4
  %59 = call i32 @BTM_TRACE_DEBUG(i8* getelementptr inbounds ([69 x i8], [69 x i8]* @.str, i64 0, i64 0), i32 %52, i32 %54, i32 %56, i32 %58)
  ret void
}

declare dso_local i32 @BTM_TRACE_DEBUG(i8*, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
